# os-chat-project

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client_gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ShmClient.cpp  ShmClient.h  SocketClient.cpp  SocketClient.h  main.cpp
demo_data/: sample_commands.txt
docs/: architecture.md  testing.md  video_script.md
scripts/: cleanup_shm.sh  run_client_shm.sh  run_client_socket.sh  run_server.sh
server/: CMakeLists.txt  client_handler.cpp  client_handler.h  server.cpp
shared/: common.h  protocol.h
tests/: CMakeLists.txt  test_shm.cpp  test_socket.cpp
